@@ -15,6 +15,7 @@
 
 import os.path
 import optparse
+import logging
 
 import gi
 gi.require_version("Gtk", "3.0")
@@ -77,6 +78,8 @@ if __name__ == '__main__':
     gtweak.DATA_DIR = DATA_DIR
     gtweak.PKG_DATA_DIR = PKG_DATA_DIR
     gtweak.ENABLE_TEST = options.test
+
+    logging.basicConfig()
 
     MainWindow()
 
