@@ -1,5 +1,6 @@
 3.0.3
-   *
+   * Autostart nautilus at login if it is configured to show
+     desktop icons (bug 648087)
 
 3.0.2
    * Really tweak window theme - both the fallback and the
